# ss-db

./: .env  .gitignore  Cargo.toml  README.md  ss.db
entities/: Cargo.toml
entities/src/: images.rs  lib.rs  match_responses_2022.rs  pit_responses_2022.rs  prelude.rs  users.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
notes/: day-1-errors.md  day-2-template.md  day-3-forms.md  day-4-methods.md
src/: app.rs  foreign_traits.rs  game.rs  lib.rs  main.rs  tera_util.rs
src/paths/: api.rs  forms2022.rs  mod.rs
static/: form.css
templates/: dbtest_index.tera  layout.tera  view.tera
templates/forms/: form.tera  form_macros.tera  match2022.tera  pit2022.tera
