[package]
name = "ss-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entities", "migration"]

[dependencies]
sea-orm = { version = "0.6", features = [ "sqlx-sqlite", "runtime-actix-native-tls", "macros" ], default-features = false }
actix-web = "4.0"
serde = { version = "1.0", features = [ "derive" ] }
anyhow = "1.0"
tera = "1.15"
dotenv = "0.15"
env_logger = "0.9.0"
log = "0.4"
actix-files = "0.6"
actix-session = { version = "0.6", features = [ "cookie-session" ] }
serde_json = "1.0"
rand = "0.8"
lazy_static = "1.4"
actix-web-flash-messages = { version = "0.3", features = [ "cookies" ] }

migration = { path = "migration" }
entities = { path = "entities" }
