[package]
name = "entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.6", features = [ "sqlx-sqlite", "runtime-actix-native-tls", "macros" ], default-features = false }
serde = { version = "1.0", features = [ "derive" ] }